# green_power_backend_by_codex

./: .dockerignore  .env  .gitignore  ARCHITECTURE.md  ENGINEERING_RULES.md  README.md  green_power_backend.postman_collection.json  pyproject.toml
.github/workflows/: ci.yml
apps/service_zones/: admin.py  apps.py  models.py  urls.py
apps/service_zones/api/: serializers.py  views.py
apps/service_zones/migrations/: 0001_initial.py  0002_device.py  0003_device_status_and_remove_pop_name.py  0004_device_stat.py
apps/telemetry/: apps.py  consumers.py  handlers.py  models.py  routing.py  schemas.py  services.py  tasks.py  urls.py  validators.py
apps/telemetry/api/: serializers.py  views.py
apps/telemetry/migrations/: 0001_initial.py
apps/users/: admin.py  cache.py  models.py  signals.py  urls.py
apps/users/api/: serializers.py  views.py
apps/users/migrations/: 0001_initial.py  0002_role_and_user_role.py  0003_role_key_and_user_role_required.py  0004_audit_fields.py
common/: db_router.py  exceptions.py  health.py  logging.py  middleware.py  models.py  mongo.py  permissions.py  redis_client.py
common/api/: time_range.py
config/: asgi.py  celery.py  urls.py
config/settings/: base.py  dev.py  prod.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/nginx/: green_power_backend.conf
requirements/: base.txt  dev.txt
scripts/: start_mqtt.py  start_tcp.py
scripts/ci/: check_selectors.py
services/mqtt/: client.py  processor.py  runner.py  subscriber.py  topics.py
services/tcp/: schemas.py  server.py
templates/: index.html
(+12 files in other folders)
