[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "green-power-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0,<5.1",
    "celery>=5.3,<6",
    "djangorestframework>=3.14,<3.15",
    "djangorestframework-simplejwt>=5.3,<5.4",
    "django-cors-headers>=4.3,<4.4",
    "drf-spectacular>=0.27,<0.28",
    "pymongo>=4.6,<4.7",
    "django-environ>=0.11,<0.12",
    "django-redis>=5.4,<5.5",
    "redis>=5.0,<6",
    "channels>=4.0,<4.1",
    "channels-redis>=4.1,<4.2",
    "pydantic>=2.7,<2.9",
    "psycopg[binary]>=3.1.10,<3.2",
    "uvicorn[standard]>=0.23,<0.24",
    "gunicorn>=21.2,<22",
    "whitenoise>=6.6,<6.7",
    "paho-mqtt>=1.6,<2.0",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.2,<4.3",
    "ipython>=8.18,<8.19",
    "pytest>=7.4,<7.5",
    "pytest-django>=4.7,<4.8",
    "ruff>=0.1.8,<0.2",
    "black>=23.12,<24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "common*", "config*", "services*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
target-version = "py311"
